<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/item_details_label"
        android:textAlignment="center"
        android:textColor="@color/layout_text"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/item_name_hint"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_700"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_black"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/item_date_label"
        android:textColor="@color/layout_text" />

    <Button
        android:id="@+id/item_datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/back_black"
        android:textColor="@color/white" />


    <CheckBox
        android:id="@+id/item_notified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/item_notified_label"
        android:textColor="@color/layout_text" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/item_notificationTime_label"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_700"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/item_notificationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_black"
            android:inputType="number"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>